Add support for `redis.uris`
This commit introduces support for the Redis cluster mode. This has
to be enabled explicitly via the `test-resources.containers.redis.cluster-mode`
property, otherwise the single mode is used.

Fixes #187